force-app/main/default/objects/WebinarMember__c/WebinarMember__c.object-meta.xml
<CustomObject>
    <label>Webinar Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webinar Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>