force-app/main/default/objects/WebinarMember__c/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>