force-app/main/default/objects/WebinarMember__c/fields/RelatedUser__c.field-meta.xml
<CustomField>
    <fullName>RelatedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Webinar_Members</relationshipName>
    <type>Lookup</type>
</CustomField>