force-app/main/default/objects/WebinarMember__c/fields/RelatedWebinar__c.field-meta.xml
<CustomField>
    <fullName>RelatedWebinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Webinar</label>
    <referenceTo>Webinar__c</referenceTo>
    <relationshipLabel>Webinar Members</relationshipLabel>
    <relationshipName>Webinar</relationshipName>
    <type>Lookup</type>
</CustomField>